# Noetic-Multi-Robot-Sandbox

./: Doxyfile  LICENSE  README.md
.github/: FUNDING.yml
docs/: contributing.md  maps.md  multi-robot-exploration.md  multi-robot-guidelines.md  multi-robot-simulations.md  references.md  robots.md  usage.md  working_environment.md
docs/nodes/: alysson2024_node.md  average_velocity_node.md  cspace_node.md  frontier_discovery_node.md  gmapping_pose_node.md  integrated_global_planner_node.md  laser_to_world_node.md  local_cspace_node.md  local_planner_node.md  map_stitching_node.md  mock_communication_model_node.md  randomized_social_welfare_node.md  relative_pose_estimator_node.md  yamauchi1999_node.md
gazebo_resources/models/testing_area/: model.config  model.sdf
gazebo_resources/worlds/: boxes.world  forest.world
html/: Alysson2024Node_8h.html  Alysson2024Node_8h.js  Alysson2024Node_8h__incl.map  Alysson2024Node_8h__incl.md5  Alysson2024Node_8h_source.html  AverageVelocityEstimatorNode_8h.html  AverageVelocityEstimatorNode_8h__incl.map  AverageVelocityEstimatorNode_8h__incl.md5  AverageVelocityEstimatorNode_8h_source.html  CSpaceNode_8h.html  CSpaceNode_8h__incl.map  CSpaceNode_8h__incl.md5  CSpaceNode_8h_source.html  Common_8h.html  Common_8h.js  Common_8h__dep__incl.map  Common_8h__dep__incl.md5  Common_8h__incl.map  Common_8h__incl.md5  Common_8h_source.html  FrontierDiscoveryNode_8h.html  FrontierDiscoveryNode_8h.js  FrontierDiscoveryNode_8h__incl.map  FrontierDiscoveryNode_8h__incl.md5  FrontierDiscoveryNode_8h_source.html  GmappingPoseNode_8h.html  GmappingPoseNode_8h__incl.map  GmappingPoseNode_8h__incl.md5  GmappingPoseNode_8h_source.html  IntegratedGlobalPlannerNode_8h.html  IntegratedGlobalPlannerNode_8h.js  IntegratedGlobalPlannerNode_8h__incl.map  IntegratedGlobalPlannerNode_8h__incl.md5  IntegratedGlobalPlannerNode_8h_source.html  LaserToWorldNode_8h.html  LaserToWorldNode_8h__incl.map  LaserToWorldNode_8h__incl.md5  LaserToWorldNode_8h_source.html  LocalCSpaceNode_8h.html  LocalCSpaceNode_8h__incl.map  (+187 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+44 more)
src/multirobotexploration/: CMakeLists.txt  package.xml  setup.py
src/multirobotexploration/config/: gazebo_robots_start_pose.yaml  rendezvous_footprint.yaml  rendezvous_plan.yaml
src/multirobotexploration/include/common/: Common.h  RendezvousPlan.h  SearchAlgorithms.h
src/multirobotexploration/include/nodes/: Alysson2024Node.h  AverageVelocityEstimatorNode.h  CSpaceNode.h  FrontierDiscoveryNode.h  GmappingPoseNode.h  IntegratedGlobalPlannerNode.h  LaserToWorldNode.h  LocalCSpaceNode.h  LocalPlannerNode.h  MapStitchingNode.h  MockCommunicationModelNode.h  RandomizedSocialWelfareNode.h  RelativePoseEstimatorNode.h  Yamauchi1999Node.h
src/multirobotexploration/launch/: exploration_stack_bringup.launch  gmapping.launch
src/multirobotexploration/rviz/: robot_0.rviz  robot_0_full.rviz  robot_1.rviz  robot_2.rviz  robot_3.rviz
src/multirobotexploration/source/common/: RendezvousPlan.cpp  SearchAlgorithms.cpp
src/multirobotexploration/source/communication/: MockCommunicationModelNode.cpp
src/multirobotexploration/source/frontier/: FrontierDiscoveryNode.cpp
src/multirobotexploration/source/laser/: LaserToWorldNode.cpp
src/multirobotexploration/source/localization/: AverageVelocityEstimatorNode.cpp  GmappingPoseNode.cpp  RelativePoseEstimatorNode.cpp
src/multirobotexploration/source/map/: CSpaceNode.cpp  LocalCSpaceNode.cpp  MapStitchingNode.cpp
src/multirobotexploration/source/navigation/: IntegratedGlobalPlannerNode.cpp  LocalPlannerNode.cpp
src/multirobotexploration/source/policies/: Alysson2024Node.cpp  RandomizedSocialWelfareNode.cpp  Yamauchi1999Node.cpp
src/multirobotsimulations/: CMakeLists.txt  package.xml  setup.py
src/multirobotsimulations/launch/: gazebo_add_robot.launch  gazebo_multi_robot_bringup.launch
src/multirobotsimulations/msg/: CustomImage.msg  CustomOcc.msg  CustomPose.msg  Frontiers.msg  MockPackage.msg  rendezvous.msg
src/multirobotsimulations/robots/pioneer3at/urdf/: pioneer3at.urdf
src/scripts/: launch_robots.sh  run_simulation.sh  start_exploration.sh  stop_forced.sh
